src/objects/DF_Region_Statistics__c.object
<CustomObject>
    <fields>
        <fullName>DF_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF_Region</label>
        <referenceTo>DF_Region__c</referenceTo>
        <relationshipLabel>DF Region Statistics</relationshipLabel>
        <relationshipName>DF_Region_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Available_Sessions__c</fullName>
        <label>Total Available Sessions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cancelled_Sessions__c</fullName>
        <label>Total Cancelled Sessions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Champions_Created__c</fullName>
        <label>Total Champions Created</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Completed_Sessions__c</fullName>
        <label>Total Completed Sessions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Friends_Created__c</fullName>
        <label>Total Friends Created</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Private_Sessions__c</fullName>
        <label>Total Private Sessions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Public_Sessions__c</fullName>
        <label>Total Public Sessions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Registered_Events__c</fullName>
        <label>Total Registered Events</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DF Region Statistic</label>
    <nameField>
        <displayFormat>STAT{000000}</displayFormat>
        <label>DF Region Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DF Region Statistics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>